# DataDrivenControl-EI

./: .gitignore  NOTEBOOK_GUIDE.md  README.md  lqi_lqg_recipe.py  ssm_and_lq_control.ipynb  state_space_controller.ipynb  test.ipynb
Alice/: lstm_acceleration_model.h5  pyproject.toml
Bao MATLAB/: EINT_system_simulation.slx  EINT_system_simulation_blank.slx  MPC_NN.m  UAV_MeasurementFcn.m  UAV_StateTransitionFcn.m  UAV_model.slx  random_init.m  rnn_quadrotor_model.json  rnn_quadrotor_model.mat
Bao MATLAB/slprj/_jitprj/: 0bdLdKDMFcv5b6TrSMqKaE.l  0bdLdKDMFcv5b6TrSMqKaE.mat  F3Q6URMmef05wpaQtI9gPG.l  F3Q6URMmef05wpaQtI9gPG.mat  Jo0LPkeTFyYbteQkVzAKRG.l  Jo0LPkeTFyYbteQkVzAKRG.mat  LHMZnNwgEujaL4DmAJGmSD.l  LHMZnNwgEujaL4DmAJGmSD.mat  Nmd5vTyqFIkNsWtA00Wl7D.l  Nmd5vTyqFIkNsWtA00Wl7D.mat  epapNuncPe7uDA3qMsu6sE.l  epapNuncPe7uDA3qMsu6sE.mat  jitEngineAccessInfo.mat  sA39wIkS34fG8RTl1vsA6GE.l  (+19 more)
Bao Python/: RNN.ipynb
Controller/: DroneAltitudeControl.ipynb  control_law.py  mpc_controller.py  mpc_controller_cli.py  simple_controller.py
FINAL/: CONVERSION_H5_TO_MAT.md  DroneController.m  DroneControllerGUI.m  FILE_INDEX.md  H5_TO_MAT_SUMMARY.md  MATLAB_usage_README.md  MPC_CONTROLLER_README.md  QUICK_REFERENCE.md  START_HERE.md  START_HERE_H5_to_MAT.md  VISUAL_GUIDE.py  advanced_testing.py  convert_h5_to_mat.py  convert_simple.py  example_usage.m  load_lstm_model.m  lstm_model.mat  mpc_implementation_summary.md  quick_convert_demo.py  quickstart.py  simple_controller.py  test_model.py  test_pid.py
Model training/: model_compute.ipynb  train_model.ipynb
(+57 files in other folders)
